// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Debe de mostrar el componente con el nombre del product 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffe Mug - Card
  </span>
</div>
`;

exports[`ProductTitle debe de mostar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
   Custom Product
</span>
`;
